{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 77,
  "lineage": "716b657b-f4f0-1baa-8c8e-84973a6f4877",
  "resources": [
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [
              {
                "proxy_enabled": true,
                "servers": []
              }
            ],
            "explicit_proxy": [],
            "firewalls": [
              "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/azureFirewalls/fw-ja-hub"
            ],
            "id": "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/firewallPolicies/fwpolicy-ja-hub",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "centralus",
            "name": "fwpolicy-ja-hub",
            "private_ip_ranges": [],
            "resource_group_name": "rg-ja-shared",
            "rule_collection_groups": [
              "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/firewallPolicies/fwpolicy-ja-hub/ruleCollectionGroups/egress-rules",
              "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/firewallPolicies/fwpolicy-ja-hub/ruleCollectionGroups/DefaultApplicationRuleCollectionGroup",
              "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/firewallPolicies/fwpolicy-ja-hub/ruleCollectionGroups/DefaultNetworkRuleCollectionGroup"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {
              "environment": "shared",
              "owner": "ja-portal-team",
              "project": "ja-mma-portal"
            },
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "fwpolicy-ja-hub",
            "resource_group_name": "rg-ja-shared",
            "subscription_id": "5a762990-f710-44f8-8027-1bb20fb3cf60"
          },
          "dependencies": [
            "module.shared.azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "allow-https",
                "priority": 100,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.alpinelinux.org",
                      "*.docker.com",
                      "*.ubuntu.com",
                      "*.google.com",
                      "*.azure.com",
                      "*.microsoft.com",
                      "*.windows.net",
                      "mcr.microsoft.com",
                      "login.microsoftonline.com",
                      "secure.aadcdn.microsoftonline-p.com",
                      "oss.sonatype.org"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "https-http-outbound",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/firewallPolicies/fwpolicy-ja-hub",
            "id": "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/firewallPolicies/fwpolicy-ja-hub/ruleCollectionGroups/egress-rules",
            "name": "egress-rules",
            "nat_rule_collection": [],
            "network_rule_collection": [],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "firewall_policy_name": "fwpolicy-ja-hub",
            "name": "egress-rules",
            "resource_group_name": "rg-ja-shared",
            "subscription_id": "5a762990-f710-44f8-8027-1bb20fb3cf60"
          },
          "dependencies": [
            "module.shared.azurerm_firewall_policy.hub",
            "module.shared.azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/publicIPAddresses/pip-firewall",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.233.122.232",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip-firewall",
            "resource_group_name": "rg-ja-shared",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "shared",
              "owner": "ja-portal-team",
              "project": "ja-mma-portal"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-firewall",
            "resource_group_name": "rg-ja-shared",
            "subscription_id": "5a762990-f710-44f8-8027-1bb20fb3cf60"
          },
          "dependencies": [
            "module.shared.azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.40.1.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/virtualNetworks/vnet-ja-hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ja-shared",
            "virtual_network_name": "vnet-ja-hub"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureFirewallSubnet",
            "resource_group_name": "rg-ja-shared",
            "subscription_id": "5a762990-f710-44f8-8027-1bb20fb3cf60",
            "virtual_network_name": "vnet-ja-hub"
          },
          "dependencies": [
            "module.shared.azurerm_resource_group.shared",
            "module.shared.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.40.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/virtualNetworks/vnet-ja-hub/subnets/PrivateEndpointSubnet",
            "name": "PrivateEndpointSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ja-shared",
            "virtual_network_name": "vnet-ja-hub"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "PrivateEndpointSubnet",
            "resource_group_name": "rg-ja-shared",
            "subscription_id": "5a762990-f710-44f8-8027-1bb20fb3cf60",
            "virtual_network_name": "vnet-ja-hub"
          },
          "dependencies": [
            "module.shared.azurerm_resource_group.shared",
            "module.shared.azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.40.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "99de0982-8f26-48cb-b1f6-1de3eba32fbe",
            "id": "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/virtualNetworks/vnet-ja-hub",
            "location": "centralus",
            "name": "vnet-ja-hub",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-ja-shared",
            "subnet": [
              {
                "address_prefixes": [
                  "10.40.1.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/virtualNetworks/vnet-ja-hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.40.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/5a762990-f710-44f8-8027-1bb20fb3cf60/resourceGroups/rg-ja-shared/providers/Microsoft.Network/virtualNetworks/vnet-ja-hub/subnets/PrivateEndpointSubnet",
                "name": "PrivateEndpointSubnet",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "environment": "shared",
              "owner": "ja-portal-team",
              "project": "ja-mma-portal"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-ja-hub",
            "resource_group_name": "rg-ja-shared",
            "subscription_id": "5a762990-f710-44f8-8027-1bb20fb3cf60"
          },
          "dependencies": [
            "module.shared.azurerm_resource_group.shared"
          ]
        }
      ]
    }
  ]
}